# recipe-app-api

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
app/app/: calc.py  settings.py  tests.py
app/core/management/commands/: wait_for_db.py
app/core/tests/: test_commands.py
github/workflows/: checks.yml
