[tool.poetry]
name = "recipe-app-api"
version = "0.1.0"
description = ""
authors = ["marta.verdugo <marta.verdugo@nanoporetech.com>"]
readme = "README.md"
packages = [{include = "recipe_app_api"}]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=3.2.4,<3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
